DuPont DevSB/src/objects/pse__Assignment__c.object
<CustomObject>
    <customHelpPage>pse__AssignmentAndScheduleHelp</customHelpPage>
    <description>Stores information about the allocation of a resource to a project and specifies the bill rate and cost rate for time entered. It references the schedule for a resource and, optionally, a project milestone.</description>
    <fields>
        <fullName>FF_PSA_Account_Assignment_Category__c</fullName>
        <description>Updating the formula for assignment category to handle exceptions in LA region which sends cost center values instead of Rebill numbers. Whenever the rebill IO field value is blank or starts with &quot;R&quot;, the account assignment category should be &quot;F&quot;, else &quot;K&quot; - decision on 1st Sep 2015 (Maria Castillo)</description>
        <formula>IF( OR(LEN(FF_PSA_Rebilling_Internal_Order__c)==0,BEGINS( FF_PSA_Rebilling_Internal_Order__c, &apos;R&apos;)),&apos;F&apos;,&apos;K&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Assignment Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Assignment_Type_Code__c</fullName>
        <formula>if(CONTAINS(text(FF_PSA_Assignment_Type__c), &apos;Work&apos;),&apos;3106602&apos;,(if(CONTAINS(text(FF_PSA_Assignment_Type__c), &apos;Travel&apos;),&apos;3106603&apos;,(if(CONTAINS(text(FF_PSA_Assignment_Type__c), &apos;Holdover&apos;),&apos;3106604&apos;,(if(CONTAINS(text(FF_PSA_Assignment_Type__c), &apos;Training&apos;),&apos;3106605&apos;,&apos;&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Assignment_Type_Short_Text__c</fullName>
        <formula>FF_PSA_Assignment_Type_Code__c  +&apos; - &apos;+ text(pse__Role__c) +&apos; - &apos; +  text(FF_PSA_Assignment_Type__c)</formula>
        <label>Assignment Type Short Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Delivery - Work</fullName>
                </value>
                <value>
                    <fullName>Project Delivery - Travel</fullName>
                </value>
                <value>
                    <fullName>Project Delivery - Training</fullName>
                </value>
                <value>
                    <fullName>Project Delivery - Holdover</fullName>
                </value>
                <value>
                    <fullName>Project Acquisition - Work</fullName>
                </value>
                <value>
                    <fullName>Project Acquisition - Travel</fullName>
                </value>
                <value>
                    <fullName>Project Acquisition - Training</fullName>
                </value>
                <value>
                    <fullName>Project Acquisition - Holdover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Contract_Line__c</fullName>
        <formula>FF_PSA_Outline_Agreement_Item__r.FF_PSA_OA_Sub_Line_Item_Nb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICDR PO Sub Line Item Nb</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Cost_Center__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>Cost Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Distribution__c</fullName>
        <formula>if( pse__Is_Billable__c ==False, &apos;Single account assignment&apos;,&apos;Distribution by percentage&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Expense_Limit__c</fullName>
        <description>To allow the PM to set the ICDR expense limit as per the operative agreement</description>
        <label>Other Expense Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_GLAccount_Expense__c</fullName>
        <formula>if(Contains(text(FF_PSA_Assignment_Type__c),&apos;Work&apos;),if(pse__Resource__r.FF_PSA_Legal_Entity_Code__c!=pse__Project__r.FF_PSA_Legal_Entity_Code__c ,&apos;72104000&apos;,&apos;72102000&apos;),&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLAccount Expense</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_GLAccount__c</fullName>
        <formula>if(Contains(text(FF_PSA_Assignment_Type__c),&apos;Work&apos;),if(pse__Resource__r.FF_PSA_Legal_Entity_Code__c!=pse__Project__r.FF_PSA_Legal_Entity_Code__c ,&apos;72103000&apos;,&apos;72101000&apos;),&apos;72105000&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ICDR_PO_No__c</fullName>
        <description>To capture the ICDR PO# from SAP after assigning them to the project</description>
        <label>ICDR PO#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Item_No__c</fullName>
        <formula>FF_PSA_Outline_Agreement_Item__r.FF_PSA_OA_Item_Nb__c</formula>
        <label>ICDR PO Item Nb</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Lodging_Expense_Limit__c</fullName>
        <label>Lodging Expense Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_OA_Item_Transportation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outline Agreement Item - Transportation</label>
        <referenceTo>Outline_Agreement_Item__c</referenceTo>
        <relationshipLabel>Assignments (Outline Agreement Item - Transportation)</relationshipLabel>
        <relationshipName>Assignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Outline_Agreement_Item_Lodging__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outline Agreement Item - Lodging</label>
        <referenceTo>Outline_Agreement_Item__c</referenceTo>
        <relationshipLabel>Assignments (Outline Agreement Item - Lodging)</relationshipLabel>
        <relationshipName>Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Outline_Agreement_Item_Other__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outline Agreement Item - Other</label>
        <referenceTo>Outline_Agreement_Item__c</referenceTo>
        <relationshipLabel>Assignments (Outline Agreement Item - Other)</relationshipLabel>
        <relationshipName>Assignments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Outline_Agreement_Item_Premium__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outline Agreement Item - Premium</label>
        <referenceTo>Outline_Agreement_Item__c</referenceTo>
        <relationshipLabel>Assignments (Outline Agreement Item - Premium)</relationshipLabel>
        <relationshipName>Assignments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Outline_Agreement_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outline Agreement Item</label>
        <referenceTo>Outline_Agreement_Item__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_PO_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PO generated for the resource for this assignment has been expired</description>
        <label>PO Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Premium_Expense_Limit__c</fullName>
        <label>Premium Lumpsum Expense Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Project_Code__c</fullName>
        <formula>pse__Project__r.FF_PSA_Internal_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Rebilling_Internal_Order__c</fullName>
        <label>Rebilling Internal Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Resource_Role__c</fullName>
        <label>Resource Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Short_Text_Expense__c</fullName>
        <formula>UPPER(&apos;E0&apos;+pse__Resource__r.FF_PSA_Business_Partner_No__c +&apos; - &apos;+ &apos;Expenses&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Text Expense</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Short_Text_Premium_Lump_Sum__c</fullName>
        <formula>UPPER(&apos;E0&apos;+pse__Resource__r.FF_PSA_Business_Partner_No__c +&apos; - &apos;+ &apos;Other Fees&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Text Premium Lump Sum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Short_Text__c</fullName>
        <formula>IF(text(pse__Role__c)=&apos;CONSULTANT SENIOR&apos;, 
 &apos;E0&apos;+pse__Resource__r.FF_PSA_Business_Partner_No__c +&apos; - &apos;+&apos;Senior Consultant&apos;,IF(text(pse__Role__c)=&apos;CONSULTANT&apos;, &apos;E0&apos;+pse__Resource__r.FF_PSA_Business_Partner_No__c +&apos; - &apos;+&apos;Consultant&apos;, 
 IF(text(pse__Role__c)=&apos;CONSULTANT PRINCIPAL&apos;
 
, &apos;E0&apos;+pse__Resource__r.FF_PSA_Business_Partner_No__c +&apos; - &apos;+&apos;Principal Consultant&apos;,  IF(text(pse__Role__c)=&apos;CONSULTANT ASSOCIATE&apos;

, &apos;E0&apos;+pse__Resource__r.FF_PSA_Business_Partner_No__c +&apos; - &apos;+&apos;Associate Consultant&apos;, 
&apos;E0&apos;+pse__Resource__r.FF_PSA_Business_Partner_No__c +&apos; - &apos;+ text(pse__Role__c)
)) ) 



)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Task_Type__c</fullName>
        <formula>if(CONTAINS(text(FF_PSA_Assignment_Type__c), &apos;Travel&apos;),&apos;Travel&apos;,(if(CONTAINS(text(FF_PSA_Assignment_Type__c), &apos;Work&apos;),&apos;Work&apos;,if(CONTAINS(text(FF_PSA_Assignment_Type__c), &apos;Holdover&apos;),&apos;Holdover&apos;,if(CONTAINS(text(FF_PSA_Assignment_Type__c), &apos;Training&apos;),&apos;Training&apos;,&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Transportation_Expense_Limit__c</fullName>
        <label>Transportation Expense Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_Assignment_Number__c</fullName>
        <label>Legacy Assignment Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_EVA_Hours_From_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</description>
        <inlineHelpText>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</inlineHelpText>
        <label>Action: Refresh EVA Hours From Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Hours_From_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Scheduled Hours and Est Vs Actuals records related to Assignment Schedule.</description>
        <inlineHelpText>If checked on save, refreshes Scheduled Hours and Est Vs Actuals records related to Assignment Schedule.</inlineHelpText>
        <label>Action: Refresh Hours From Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Daily_Notes_Last_Updated__c</fullName>
        <description>Date-time of most recent insert/update/delete/undelete on the Assignment Daily Notes child records.</description>
        <inlineHelpText>Date-time of most recent insert/update/delete/undelete on the Assignment Daily Notes child records.</inlineHelpText>
        <label>Assignment Daily Notes Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Daily_Notes__c</fullName>
        <description>Shows concatenated notes from Assignment&apos;s Daily Notes child records.</description>
        <inlineHelpText>Shows concatenated notes from Assignment&apos;s Daily Notes child records.</inlineHelpText>
        <label>Assignment Daily Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Number__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Currency_Code__c</fullName>
        <label>Average Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Number__c</fullName>
        <label>Average Cost Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate__c</fullName>
        <formula>pse__Average_Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Average_Cost_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence_Number__c</fullName>
        <description>Not intended for display. Needed to convert the autonumber to a numeric value for sorting.</description>
        <formula>Value(pse__Batch_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence__c</fullName>
        <description>An auto-number used for batch processing assignments. Not intended for display.</description>
        <displayFormat>{0}</displayFormat>
        <label>Batch Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Rate__c</fullName>
        <inlineHelpText>Enter the hourly bill rate for the resource</inlineHelpText>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Amount In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Amount Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Expense Reports and Expenses may no longer be entered for this Assignment.  Is checked automatically when the Assignment&apos;s Project is Closed for Expense Entry.</description>
        <label>Closed for Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Timecards may no longer be entered for this Assignment.  Is checked automatically when the Assignment&apos;s Project is Closed for Time Entry.</description>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
        <label>Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate__c</fullName>
        <formula>pse__Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(ROUND(pse__Cost_Rate_Amount__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Bill_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Timecard_Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Timecard Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>pse__Schedule__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Time_To_Completion__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Estimated Time To Completion</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</description>
        <inlineHelpText>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Planners__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to exclude this assignment from the Resource Planner and Project Planner. NOTE: any excluded assignments will not be included totals calculations and color coding within the planners.</inlineHelpText>
        <label>Exclude from Planners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hours_to_Days_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies how to convert hours to days for time cards against this assignment</description>
        <inlineHelpText>Specifies how to convert hours to days for time cards against this assignment</inlineHelpText>
        <label>Hours to Days Rule</label>
        <referenceTo>pse__Hours_to_Days_Rule__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</description>
        <inlineHelpText>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only milestones for the same project are shown. To display all milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Nick_Name__c</fullName>
        <description>Field for holding the nick name of the assignment</description>
        <label>Nick Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Expense Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Expense Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Expense Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Expense Group For Assignments</relationshipLabel>
        <relationshipName>Override_ExpGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Expense Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Expense Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Expense Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Expense Practice For Assignments</relationshipLabel>
        <relationshipName>Override_ExpPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Expense Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Expense Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Expense Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Expense Region For Assignments</relationshipLabel>
        <relationshipName>Override_ExpRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_RPG_Audit_Notes__c</fullName>
        <description>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
        <inlineHelpText>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
        <label>Override RPG Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Override_RPG_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
        <inlineHelpText>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
        <label>Override RPG Enabled</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>